nav-collapse's burger image changed and bug fixed in several sections

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3137,17 +3137,17 @@ input[type=button].btn-block {
 .dropdown-item {
   display: block;
   width: 100%;
-  padding: 0.25rem 1.5rem;
+  padding: 0.35rem 0;
   clear: both;
-  font-weight: 400;
-  color: #212529;
+  font-weight: 800;
+  color: white;
   text-align: inherit;
   white-space: nowrap;
   background-color: transparent;
   border: 0;
 }
 .dropdown-item:hover, .dropdown-item:focus {
-  color: #16181b;
+  color: #FA9632;
   text-decoration: none;
   background-color: #e9ecef;
 }
@@ -4320,10 +4320,12 @@ input[type=button].btn-block {
 }
 .navbar-dark .navbar-toggler {
   color: rgba(255, 255, 255, 0.5);
-  border-color: rgba(255, 255, 255, 0.1);
+  /* border-color: rgba(255, 255, 255, 0.1); */
 }
 .navbar-dark .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  background-image: url('/img/landing/nav-collapse-burger.png');
+  height: 30;
+  width: 30;
 }
 .navbar-dark .navbar-text {
   color: rgba(255, 255, 255, 0.5);
